@@ -1,4 +1,5 @@
 0.7.2
+- Make sure stderr is used consistently in utils
 
 0.7.1
 - Add CAP_COMPROMISE_KERNEL
